No longer need logs, let's use std Also, rewrite for heroku

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 8000 default;
     index index.php;
 
-    error_log /var/log/error.log;
-    access_log /var/log/access.log;
+    error_log stderr;
+    access_log /dev/stdout;
 
     root /code/public;
 
