--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "slim/slim": "^4.5",
         "botman/driver-slack": "^2.2",
         "guzzlehttp/psr7": "^1.6",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "http-interop/http-factory-guzzle": "^1.0",
+        "monolog/monolog": "^2.0",
+        "league/container": "^3.3",
+        "league/oauth2-client":  "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
