Add ssl for localhost

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,5 +1,9 @@
 server {
-    listen 8000 default;
+    listen 80 default;
+    listen 443 ssl;
+    server_name  localhost.isitspringyet.be;
+    ssl_certificate /etc/nginx/certs/domain.crt;
+    ssl_certificate_key /etc/nginx/certs/domain.key;
     index index.php;
 
     error_log stderr;
