--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   webserver:
     environment:
       - VIRTUAL_HOST=zoomroulette.isitspringyet.be
-      - VIRTUAL_PORT=8000
+      - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=zoomroulette.isitspringyet.be
       - LETSENCRYPT_EMAIL=marijnnn@gmail.com
     image: 'nginx:alpine'
@@ -12,12 +12,14 @@ services:
     volumes:
       - '.:/code'
       - './docker/nginx.conf:/etc/nginx/conf.d/default.conf'
+      - './docker/certs:/etc/nginx/certs'
     depends_on:
       - php-fpm
     expose:
-      - '8000'
+      - '80'
     ports:
-      - '9009:8000'
+      - '80:80'
+      - '443:443'
   php-fpm:
     image: 'php:7.4-fpm-alpine'
     container_name: zoomroulette-php-fpm
