Adds error handling

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,5 @@ ZOOM_VERIFICATIONTOKEN=
 ROOT_URL=https://localhost.isitspringyet.be
 SLACK_CLIENTID=
 SLACK_CLIENTSECRET=
+DISPLAY_ERROR_DETAILS=true
+
