--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "monolog/monolog": "^2.0",
         "league/container": "^3.3",
         "league/oauth2-client":  "^2.4",
+        "slim/twig-view": "^3.1",
         "bryanjhv/slim-session": "^4.0"
     },
     "require-dev": {
