--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - ZOOM_CLIENTSECRET=${ZOOM_CLIENTSECRET}
       - SLACK_CLIENTID=${SLACK_CLIENTID}
       - SLACK_CLIENTSECRET=${SLACK_CLIENTSECRET}
+      - SLACK_VERIFICATIONTOKEN=${SLACK_VERIFICATIONTOKEN}
+      - SLACK_SIGNINGSECRET=${SLACK_SIGNINGSECRET}
       - ROOT_URL=${ROOT_URL}
 networks:
   default:
