--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,14 @@ services:
       - './docker/certs:/etc/nginx/certs'
     depends_on:
       - php-fpm
+      - postgres
     expose:
       - '80'
     ports:
       - '80:80'
       - '443:443'
   php-fpm:
-    image: 'php:7.4-fpm-alpine'
+    build: ./docker/php
     container_name: zoomroulette-php-fpm
     working_dir: /code
     expose:
@@ -36,6 +37,16 @@ services:
       - SLACK_VERIFICATIONTOKEN=${SLACK_VERIFICATIONTOKEN}
       - SLACK_SIGNINGSECRET=${SLACK_SIGNINGSECRET}
       - ROOT_URL=${ROOT_URL}
+      - DATABASE_URL=${DATABASE_URL}
+  postgres:
+    image: 'postgres:12-alpine'
+    environment:
+      - 'POSTGRES_USER:marikittens'
+      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
+    expose:
+      - '5432'
+    ports:
+      - '5432:5432'
 networks:
   default:
     external:
