--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "league/container": "^3.3",
         "league/oauth2-client":  "^2.4",
         "slim/twig-view": "^3.1",
-        "bryanjhv/slim-session": "^4.0"
+        "bryanjhv/slim-session": "^4.0",
+        "doctrine/dbal": "^2.10",
+        "ext-json": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1"
     },
     "autoload": {
 
