let's generate uuids

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "bryanjhv/slim-session": "^4.0",
         "doctrine/dbal": "^2.10",
         "ext-json": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ramsey/uuid": "^4.1"
     },
     "require-dev": {
     },
