--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
   postgres:
     image: 'postgres:12-alpine'
     environment:
-      - 'POSTGRES_USER:marikittens'
+      - 'POSTGRES_USER:postgres'
       - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
     expose:
       - '5432'
