Complete .env.dist file

--- a/.env.dist
+++ b/.env.dist
@@ -4,5 +4,11 @@ ZOOM_VERIFICATIONTOKEN=
 ROOT_URL=https://localhost.isitspringyet.be
 SLACK_CLIENTID=
 SLACK_CLIENTSECRET=
+SLACK_SIGNINGSECRET=
+SLACK_VERIFICATIONTOKEN=
 DISPLAY_ERROR_DETAILS=true
+SESSION_SECRET=
+POSTGRES_PASSWORD=
+DATABASE_URL=
+LOG_LEVEL=DEBUG
 
