Reflecting production version :see_no_evil:

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,15 +1,11 @@
 server {
     listen 80 default;
-    listen 443 ssl;
-    server_name  localhost.isitspringyet.be;
-    ssl_certificate /etc/nginx/certs/domain.crt;
-    ssl_certificate_key /etc/nginx/certs/domain.key;
     index index.php;
 
     error_log stderr;
     access_log /dev/stdout;
 
-    root /code/public;
+    root /code/;
 
     # Deny all . files
     location ~ /\. {
@@ -17,7 +13,7 @@ server {
     }
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files /public/$uri /public/index.php$is_args$args;
     }
 
     location ~ \.php {
@@ -27,6 +23,6 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass zoomroulette-php-fpm:9000;
     }
 }
