--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  webserver:
+  zoomroulette-webserver:
     environment:
       - VIRTUAL_HOST=zoomroulette.isitspringyet.be
       - VIRTUAL_PORT=80
@@ -12,41 +12,35 @@ services:
     volumes:
       - '.:/code'
       - './docker/nginx.conf:/etc/nginx/conf.d/default.conf'
-      - './docker/certs:/etc/nginx/certs'
+      - './logs:/var/log/nginx'
     depends_on:
       - php-fpm
-      - postgres
     expose:
       - '80'
-    ports:
-      - '80:80'
-      - '443:443'
   php-fpm:
     build: ./docker/php
     container_name: zoomroulette-php-fpm
     working_dir: /code
     expose:
       - '9000'
+    dns:
+      - 8.8.8.8
+      - 4.4.4.4
     volumes:
       - '.:/code'
     environment:
       - ZOOM_CLIENTID=${ZOOM_CLIENTID}
       - ZOOM_CLIENTSECRET=${ZOOM_CLIENTSECRET}
+      - ZOOM_VERIFICATIONTOKEN=${ZOOM_VERIFICATIONTOKEN}
+      - ROOT_URL=${ROOT_URL}
       - SLACK_CLIENTID=${SLACK_CLIENTID}
       - SLACK_CLIENTSECRET=${SLACK_CLIENTSECRET}
-      - SLACK_VERIFICATIONTOKEN=${SLACK_VERIFICATIONTOKEN}
       - SLACK_SIGNINGSECRET=${SLACK_SIGNINGSECRET}
-      - ROOT_URL=${ROOT_URL}
+      - SLACK_VERIFICATIONTOKEN=${SLACK_VERIFICATIONTOKEN}
+      - DISPLAY_ERROR_DETAILS=${DISPLAY_ERROR_DETAILS}
+      - SESSION_SECRET=${SESSION_SECRET}
       - DATABASE_URL=${DATABASE_URL}
-  postgres:
-    image: 'postgres:12-alpine'
-    environment:
-      - 'POSTGRES_USER:postgres'
-      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
-    expose:
-      - '5432'
-    ports:
-      - '5432:5432'
+      - LOG_LEVEL=${LOG_LEVEL}
 networks:
   default:
     external:
