--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,4 @@
 FROM php:7.4-fpm-alpine
-RUN set -ex \
-	&& apk --no-cache add postgresql-libs postgresql-dev \
-	&& docker-php-ext-install pgsql pdo_pgsql \
-	&& apk del postgresql-dev
+RUN docker-php-ext-install pdo pdo_mysql
+
+WORKDIR /code
