--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,6 +23,6 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
-        fastcgi_pass zoomroulette-php-fpm:9000;
+        fastcgi_pass coffeeroulette-php-fpm:9000;
     }
 }
